--- a/package.json
+++ b/package.json
@@ -2,7 +2,34 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "clone_rep": "ssh krtiru@77.222.40.60 \"git clone https://github.com/asmi046/rubex_electro electo/public_html\"",
+        "composer_remove": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 composer.phar dumpauto\"",
+        "composer_install": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 composer.phar install --no-dev\"",
+        "composer_update": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 composer.phar update\"",
+        "pull_rep": "ssh krtiru@77.222.40.60 \"cd electo/public_html && git pull\"",
+        "clean_rep": "ssh krtiru@77.222.40.60 \"cd electo/public_html && git clean -f\"",
+        "stash": "ssh krtiru@77.222.40.60 \"cd electo/public_html && git stash\"",
+        "reset_rep": "ssh krtiru@77.222.40.60 \"cd electo/public_html && git reset --hard\"",
+        "send_vite_build": "scp -C -r public/build krtiru@77.222.40.60:electo/public_html/public",
+        "migrate_rep": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan migrate\"",
+        "rollback_rep": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan migrate:rollback\"",
+        "seed_rep": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan DB:seed\"",
+        "seed_rep_one": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan DB:seed AgencySeeder\"",
+        "db_update_total": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan migrate:refresh --seed\"",
+        "optimized_rep": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 composer.phar update --optimize-autoloader --no-dev\"",
+        "dump_autoload": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 composer.phar dump-autoload\"",
+        "storage_link": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan storage:link\"",
+        "key_gen": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan key:generate\"",
+        "cache_config": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan config:cache\"",
+        "cache_route": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan route:cache\"",
+        "cache_view": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan view:cache\"",
+        "cache_clear": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan cache:clear\"",
+        "optimize": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan optimize\"",
+        "optimize_all": "npm run optimize && npm run cache_clear && npm run cache_view && npm run cache_route && npm run cache_config",
+        "orchid_user": "ssh krtiru@77.222.40.60 \"cd electo/public_html && php8.2 artisan orchid:admin admin asmi046@gmail.com 123\"",
+        "deploy_m": "vite build && npm run send_vite_build && npm run pull_rep && npm run optimize_all"
+
     },
     "devDependencies": {
         "axios": "^1.1.2",
